feat: adds initial version of renderer and API certificate support (#190)
